--- a/practical/practical8.Rnw
+++ b/practical/practical8.Rnw
@@ -12,6 +12,7 @@
 \title{Generalised Linear Models, Assessed Practical}
 \author{Practical No. P049}
 \begin{document}
+\SweaveOpts{concordance=TRUE}
 
 
 \maketitle
